--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>hotel-data</module>
         <module>hotel-web</module>
+        <module>hotel-webadmin</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
