--- a/hotel-webadmin/src/main/resources/application.properties
+++ b/hotel-webadmin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
