--- a/hotel-web/src/main/resources/application.properties
+++ b/hotel-web/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #When column name "displayName"
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+spring.security.enables = false
+management.security.enables = false
+security.basic.enables = false
