--- a/hotel-web/src/main/resources/application.properties
+++ b/hotel-web/src/main/resources/application.properties
@@ -13,7 +13,6 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
-spring.security.enables = false
-management.security.enables = false
-security.basic.enables = false
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
