--- a/hotel-web/src/main/resources/application.properties
+++ b/hotel-web/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
